# rustrt

./: .gitignore  Cargo.toml  README.md
src/: J19.txt  bounds.rs  camera.rs  hittable.rs  main.rs  material.rs  plan.txt  ray.rs  ray_color.rs  render.rs  scene.rs  thread_pool.rs  transforms.rs  vector.rs
src/hittable/: bvh.rs
src/render/: shader.wgsl  texture.rs
